--- a/Index.html
+++ b/Index.html
@@ -183,8 +183,8 @@ pre code {
 <div id="work-petroleum-engineer" class="section level3">
 <h3>Work: Petroleum Engineer</h3>
 </div>
-<div id="interests-aviation-and-air-power" class="section level3">
-<h3>Interests: Aviation and Air Power!</h3>
+<div id="interests-aviation-and-data-science" class="section level3">
+<h3>Interests: Aviation and Data Science!</h3>
 </div>
 </div>
 
