--- a/Index.html
+++ b/Index.html
@@ -186,6 +186,12 @@ pre code {
 <div id="interests-aviation-and-data-science" class="section level3">
 <h3>Interests: Aviation and Data Science!</h3>
 </div>
+<div id="school-smu" class="section level3">
+<h3>School: SMU</h3>
+<div id="the-other-tabs-represent-work-analyses-that-i-have-completed.-please-check-them-out" class="section level4">
+<h4>The other tabs represent work / analyses that I have completed. Please check them out!</h4>
+</div>
+</div>
 </div>
 
 
