--- a/Index.html
+++ b/Index.html
@@ -188,6 +188,9 @@ pre code {
 </div>
 <div id="school-smu" class="section level3">
 <h3>School: SMU</h3>
+</div>
+<div id="section" class="section level3">
+<h3></h3>
 <div id="the-other-tabs-represent-work-analyses-that-i-have-completed.-please-check-them-out" class="section level4">
 <h4>The other tabs represent work / analyses that I have completed. Please check them out!</h4>
 </div>
